--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <i class="fa-solid ms-5 judul" title="DEMO SLOT | MENTARI138">DEMO SLOT | MENTARI138</i>
           </div>
           <div class="col subnav d-flex justify-content-center align-items-center">
-            <a class="link-primary text-center me-5" href="#"><i class="fa-solid fa-beat">RTP Live</i></a>
-            <a class="link-primary text-center ms-5" href="#"><i class="fa-solid fa-beat">Register</i></a>
+            <a class="link-primary text-center me-5" href="https://muginurulihksani.github.io/RTPMentari/"><i class="fa-solid fa-beat">RTP Live</i></a>
+            <a class="link-primary text-center ms-5" href="https://198.211.112.170/account/register/teammugi"><i class="fa-solid fa-beat">Register</i></a>
           </div>
         </nav>
       </div>
