--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <i class="fa-solid ms-5 judul" title="DEMO SLOT | MENTARI138">DEMO SLOT | MENTARI138</i>
           </div>
           <div class="col subnav d-flex justify-content-center align-items-center">
-            <a class="link-primary text-center me-5" href="https://muginurulihksani.github.io/RTPMentari/"><i class="fa-solid fa-beat">RTP Live</i></a>
-            <a class="link-primary text-center ms-5" href="https://198.211.112.170/account/register/teammugi"><i class="fa-solid fa-beat">Register</i></a>
+            <a class="link-primary text-center me-5" href="https://muginurulihksani.github.io/RTPMentari/" target="_blank"><i class="fa-solid fa-beat">RTP Live</i></a>
+            <a class="link-primary text-center ms-5" href="https://198.211.112.170/account/register/teammugi" target="_blank"><i class="fa-solid fa-beat">Register</i></a>
           </div>
         </nav>
       </div>
@@ -38,21 +38,21 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img/slide.png" class="d-block w-100" alt="..." />
+                  <img src="img/slide.png" class="d-block w-100" alt="BONUS NEW MEMBER 50%" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>BONUS NEW MEMBER 50%</h5>
                     <p>BONUS LANGSUNG DI BERIKAN DI DEPAN!!!</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slide.png" class="d-block w-100" alt="..." />
+                  <img src="img/slide.png" class="d-block w-100" alt="BONUS ROLLINGAN" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>BONUS ROLLINGAN 1%</h5>
                     <p>BONUS ROLLINGAN DIBAGIKAN SETIAP HARI!!!</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img/slide.png" class="d-block w-100 shadow" alt="..." />
+                  <img src="img/slide.png" class="d-block w-100 shadow" alt="PROSES FAST" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>PROSES DEPO & WD TERCEPAT</h5>
                     <p>KAMI PASTIKAN TIDAK SAMPAI 5 MENIT</p>
