--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MENTARI138 | SLOT DEMO</title>
     <link href="assets/css/fontawesome.css" rel="stylesheet" />
     <link href="assets/css/brands.css" rel="stylesheet" />
     <link href="assets/css/solid.css" rel="stylesheet" />
