--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="modal-body">
                       <div class="ratio ratio-4x3">
                         <iframe
-                          id="embededGame"
+                          id="olympusgates"
                           tabindex="0"
                           frameborder="0"
                           scrolling="no"
@@ -100,7 +100,7 @@
                           src="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?gameSymbol=vs10bxmasbnza&amp;websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&amp;jurisdiction=99&amp;lobby_url=https%3A%2F%2Fwww.pragmaticplay.com%2Fen%2F&amp;lang=ID&amp;cur=IDR"
                         ></iframe>
                       </div>
-                      <button class="btn btn-primary mt-3" onclick="goFullscreen('embededGame'); return false">Fullscreen</button>
+                      <button class="btn btn-primary mt-3" onclick="goFullscreen('olympusgates'); return false">Fullscreen</button>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -127,7 +127,7 @@
                     <div class="modal-body">
                       <div class="ratio ratio-4x3">
                         <iframe
-                          id="iframe"
+                          id="embededGame"
                           tabindex="0"
                           frameborder="0"
                           scrolling="no"
@@ -164,7 +164,7 @@
                     <div class="modal-body">
                       <div class="ratio ratio-4x3">
                         <iframe
-                          id="iframe"
+                          id="bonanzasweet"
                           tabindex="0"
                           frameborder="0"
                           scrolling="no"
@@ -174,7 +174,7 @@
                           src="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?gameSymbol=vs20fruitsw&amp;websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&amp;jurisdiction=99&amp;lobby_url=https%3A%2F%2Fwww.pragmaticplay.com%2Fen%2F&amp;lang=ID&amp;cur=IDR"
                         ></iframe>
                       </div>
-                      <button class="btn btn-primary mt-3" onclick="goFullscreen('embededGame'); return false">Fullscreen</button>
+                      <button class="btn btn-primary mt-3" onclick="goFullscreen('bonanzasweet'); return false">Fullscreen</button>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -201,7 +201,7 @@
                     <div class="modal-body">
                       <div class="ratio ratio-4x3">
                         <iframe
-                          id="iframe"
+                          id="aztecgemss"
                           tabindex="0"
                           frameborder="0"
                           scrolling="no"
@@ -211,7 +211,7 @@
                           src="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?gameSymbol=vs5aztecgems&amp;websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&amp;jurisdiction=99&amp;lobby_url=https%3A%2F%2Fwww.pragmaticplay.com%2Fen%2F&amp;lang=ID&amp;cur=IDR"
                         ></iframe>
                       </div>
-                      <button class="btn btn-primary mt-3" onclick="goFullscreen('embededGame'); return false">Fullscreen</button>
+                      <button class="btn btn-primary mt-3" onclick="goFullscreen('aztecgemss'); return false">Fullscreen</button>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
